# JelA_Engine

./: .gitignore  Application.cpp  Application.h  Audio.cpp  AudioService.cpp  BaseGame.cpp  BaseGame.h  CMakeLists.txt  CPlayer.cpp  CPlayer.h  Controller.cpp  Defines.h  Engine.cpp  Engine.h  EnginePropertySheet.props  Game.cpp  Game.h  JelA_Engine.rc  JelA_Engine.sln  JelA_Engine.vcxproj  JelA_Engine.vcxproj.filters  Main.cpp  MyOwnEngineExercise.sln  MyOwnEngineExercise.vcxproj  MyOwnEngineExercise.vcxproj.filters  Observer.h  Player.cpp  Player.h  ReadMe.md  Resource.h  ResourceManager.cpp  ResourceManager.h  Structs.cpp  Structs.h  framework.h
Engine/: CMakeLists.txt  CPlayer.cpp  Controller.h  Defines.h  Engine.cpp
Engine/include/: Audio.h  AudioService.h  BaseGame.h  CPlayer.h  Controller.h  Defines.h  Engine.h  FileExceptions.h  Geometry.h  Observer.h  ResourceManager.h  Structs.h
Engine/src/: Audio.cpp  AudioService.cpp  CPlayer.cpp  Controller.cpp  Engine.cpp  Geometry.cpp  ResourceManager.cpp  Structs.cpp  XAudioService.cpp
Game/: CMakeLists.txt  Game.cpp  Game.h  Icons.rc  Main.cpp
Game/src/: Main.cpp
